methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: not found: type versLAvant
    new versLAvant:Boolean
        ^MethodsArgs:5: error: not found: value verLAvant
    verLAvant=true
    ^MethodsArgs:8: error: not found: type versLAvant
    new versLAvant:Boolean
        ^MethodsArgs:9: error: not found: value verLAvant
    verLAvant=false
    ^MethodsArgs:13: error: reassignment to val
  nbPas=6-Y
       ^MethodsArgs:20: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-0 to nbPas){
          ^MethodsArgs:19: error: type mismatch;
 found   : Unit
 required: Int
  if(versLAvant==false){
  ^